@@ -189,4 +189,5 @@ MessageCounter 2.1.20 [December 2013]
 	Version 3.0
  ------------------------------------
  MessageCounter 3.0.0 [November 2014] - Talisman (Material Design)
- 
+  - Redesign Counter fragment 
+  - Use CardView
